<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:paddingBottom="2dp"
              android:paddingTop="2dp"
              android:paddingLeft="8dp"
              android:paddingRight="8dp"
    >

    <TextView
        android:id="@+id/tv_apply_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/friend_apply_hint"
        android:textSize="18sp"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/et_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/et_login"
        android:textCursorDrawable="@drawable/et_cursor_search"
        android:padding="4dp"
        android:lines="3"
        android:maxLines="5"
        android:layout_marginTop="8dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="4dp"
        >

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@drawable/btn_friend_apply_cancel"
            android:textSize="18sp"
            />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:background="@drawable/btn_friend_apply_send"
            android:textColor="@color/white"
            android:textSize="18sp"
            />

    </LinearLayout>


</LinearLayout>